--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dabom-langchain"
-version = "0.1.1"
+version = "0.1.2"
 authors = [
   { name="Dongho Yee", email="dongho3929@gmail.com" },
 ]
@@ -19,4 +19,4 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://dabomai.com"
+Homepage = "https://github.com/LighterLinks/dabom-langchain.git"
